assets/deployments/iba/iba-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iba
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/request-modifier: "ReplacePathRegex:/api-documentation/solumina-iba/ /solumina-G8/api/"
spec:
  rules:
    - host: --DNS_NAME--
      http:
        paths:
          - path: /solumina-G8/
            backend:
              serviceName: iba
              servicePort: 8080

          - path: /solumina-G8/api/
            backend:
              serviceName: iba
              servicePort: 8080

          - path: /solumina-G8/api/health
            backend:
              serviceName: iba
              servicePort: 8080

          - path: /api-documentation/solumina-iba/
            backend:
              serviceName: iba
              servicePort: 8080
